src/test/ui/parser/issue-62524.stderr
error: this file contains an un-closed delimiter
  --> $DIR/issue-62524.rs:4:3
   |
LL | y![
   |   - un-closed delimiter
LL | Ϥ,
   |   ^

error: macros that expand to items must be delimited with braces or followed by a semicolon
  --> $DIR/issue-62524.rs:3:3
   |
LL |   y![
   |  ___^
LL | | Ϥ,
   | |__^
   |
help: change the delimiters to curly braces
   |
LL | y!{
LL | Ϥ}
   |
help: add a semicolon
   |
LL | Ϥ,;
   |   ^

error: cannot find macro `y` in this scope
  --> $DIR/issue-62524.rs:3:1
   |
LL | y![
   | ^

error: aborting due to 3 previous errors

